--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
         "install-client": "npm install --prefix client",
         "install-all": "npm install && npm run install-server && npm run install-client",
         "build-client": "npm run build --prefix client",
-        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run install-client && npm run build-client"
+        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run install-client && npm run build-client",
+        "create-admin": "node server/scripts/createAdmin.js",
+        "debug-db": "node server/scripts/debugConnection.js",
+        "create-admin-quiz-app": "node server/scripts/createAdminCustom.js quiz_app"
     },
     "author": "Aidil Saputra Kirsan",
     "license": "MIT",
