--- a/vercel.json
+++ b/vercel.json
@@ -3,45 +3,32 @@
   "builds": [
     {
       "src": "server/server.js",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": [
-          "server/**"
-        ]
-      }
+      "use": "@vercel/node"
     },
     {
       "src": "client/package.json",
       "use": "@vercel/static-build",
       "config": { 
         "distDir": "build",
-        "buildCommand": "npm install --production=false && npm run build"
+        "buildCommand": "CI=false npm run build"
       }
     }
   ],
   "routes": [
     {
-      "src": "/socket.io/(.*)",
-      "dest": "server/server.js"
-    },
-    {
       "src": "/api/(.*)",
       "dest": "server/server.js"
     },
     {
-      "src": "/static/(.*)",
-      "dest": "client/build/static/$1"
+      "src": "/socket.io/(.*)",
+      "dest": "server/server.js"
     },
     {
-      "src": "/(.*\\.(js|json|css|ico|png|jpg|svg|webp)$)",
-      "dest": "client/build/$1"
+      "handle": "filesystem"
     },
     {
       "src": "/(.*)",
       "dest": "client/build/index.html"
     }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  ]
 }
