--- a/vercel.json
+++ b/vercel.json
@@ -8,23 +8,32 @@
     {
       "src": "client/package.json",
       "use": "@vercel/static-build",
-      "config": { 
+      "config": {
         "distDir": "build",
-        "buildCommand": "CI=false npm run build"
+        "buildCommand": "cd client && CI=false npm install && npm run build"
       }
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "server/server.js"
-    },
-    {
       "src": "/socket.io/(.*)",
       "dest": "server/server.js"
     },
     {
-      "handle": "filesystem"
+      "src": "/api/(.*)",
+      "dest": "server/server.js"
+    },
+    {
+      "src": "/static/(.*)",
+      "dest": "client/build/static/$1"
+    },
+    {
+      "src": "/favicon.ico",
+      "dest": "client/build/favicon.ico"
+    },
+    {
+      "src": "/(.*\\.(js|json|css|png|jpg|svg|webp)$)",
+      "dest": "client/build/$1"
     },
     {
       "src": "/(.*)",
