--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "server/server.js",
+      "src": "server/api/index.js",
       "use": "@vercel/node"
     },
     {
@@ -17,27 +17,39 @@
   "routes": [
     {
       "src": "/socket.io/(.*)",
-      "dest": "server/server.js"
+      "dest": "/server/api/socket.js"
     },
     {
       "src": "/api/(.*)",
-      "dest": "server/server.js"
+      "dest": "/server/api/index.js"
     },
     {
-      "src": "/static/(.*)",
-      "dest": "client/build/static/$1"
+      "src": "/(assets|static)/(.*)",
+      "dest": "/client/build/$1/$2"
     },
     {
       "src": "/favicon.ico",
-      "dest": "client/build/favicon.ico"
+      "dest": "/client/build/favicon.ico"
     },
     {
-      "src": "/(.*\\.(js|json|css|png|jpg|svg|webp)$)",
-      "dest": "client/build/$1"
+      "src": "/manifest.json",
+      "dest": "/client/build/manifest.json"
+    },
+    {
+      "src": "/logo(.*).png",
+      "dest": "/client/build/logo$1.png"
+    },
+    {
+      "src": "/(.*)\\.js",
+      "dest": "/client/build/$1.js"
+    },
+    {
+      "src": "/(.*)\\.css",
+      "dest": "/client/build/$1.css"
     },
     {
       "src": "/(.*)",
-      "dest": "client/build/index.html"
+      "dest": "/client/build/index.html"
     }
   ]
 }
