--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,14 @@
         "react-scripts": "^5.0.1",
         "socket.io-client": "^4.6.1"
     },
+    "homepage": "https://aidilsaputrakirsan.github.io/PrePost-Test",
     "scripts": {
         "start": "react-scripts start",
         "build": "CI=false react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
@@ -35,5 +38,8 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "http://localhost:5000"
+    "proxy": "http://localhost:5000",
+    "devDependencies": {
+        "gh-pages": "^6.3.0"
+    }
 }
