--- a/client/.env.production
+++ b/client/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://your-app-name.glitch.me/api
-REACT_APP_BACKEND_URL=https://your-app-name.glitch.me
+REACT_APP_API_URL=https://dented-dandelion-silver.glitch.me/api
+REACT_APP_BACKEND_URL=https://dented-dandelion-silver.glitch.me
