--- a/vercel.json
+++ b/vercel.json
@@ -2,54 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "server/api/index.js",
+      "src": "server/server.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "client/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build",
-        "buildCommand": "cd client && CI=false npm install && npm run build"
-      }
     }
   ],
   "routes": [
     {
-      "src": "/socket.io/(.*)",
-      "dest": "/server/api/socket.js"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "/server/api/index.js"
-    },
-    {
-      "src": "/(assets|static)/(.*)",
-      "dest": "/client/build/$1/$2"
-    },
-    {
-      "src": "/favicon.ico",
-      "dest": "/client/build/favicon.ico"
-    },
-    {
-      "src": "/manifest.json",
-      "dest": "/client/build/manifest.json"
-    },
-    {
-      "src": "/logo(.*).png",
-      "dest": "/client/build/logo$1.png"
-    },
-    {
-      "src": "/(.*)\\.js",
-      "dest": "/client/build/$1.js"
-    },
-    {
-      "src": "/(.*)\\.css",
-      "dest": "/client/build/$1.css"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/client/build/index.html"
+      "dest": "server/server.js"
     }
   ]
 }
